# fish

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  main.c
fish_lib/: fish_lib.c  fish_lib.h
fish_shell/: CMakeLists.txt  fish_commands.c  fish_commands.h  fish_core.c  fish_core.h  fish_globbing.c  fish_globbing.h  fish_settings.c  fish_settings.h  fish_types.h  fish_utils.c  fish_utils.h  main.c
fish_shell_tests/: CMakeLists.txt  FishCoreTests.cpp  FishCoreTests.h  FishSettingsTests.cpp  FishUtilsTests.cpp  fishrc  main.cpp
